next version of the compact CV

--- a/CV/Html/cv.html
+++ b/CV/Html/cv.html
@@ -54,9 +54,12 @@
 <dt>Company Specialization</dt>
 <dd>World-known IDEs for Software Developers and not only.</dd>
 <dt>Positions</dt>
-<dd></dd>
+<dd><ul style="list-style-type:none"><li>Software Developer, Generative Design</li>
+<li>Frontend-Developer, JetBrains Website & Component System</li>
+<li>Frontend-Developer, WebHelp</li>
+<li>Frontend-Developer, Developer Ecosystem Surveys</li></ul></dd>
 <dt>Experience</dt>
-<dd>In JetBrains, I started as FrontEnd developer and my last position was the Technical Lead for fresh-created team of generative art. Using HTML Canvas & WebGL and neural networks, for more than five years we produced a large part of design materials for the marketing needs as well as splash screens for well-known IDEs.</dd></dl><div class="positions"></div><br/><br/><h3><a name="animatron">Animatron LLC (aff. with JetBrains)</a></h3><span class="workpace-period">(07/2011 — 05/2016, 5 years)</span><dl><dt>Where</dt>
+<dd>At first, I was participating in developing the component system in React for the company website and the documentation portal, then I developed all the charts for DevEcosystem surveys using `d3.js`.<br/><br/>Then, almost a year in the marketing team.<br/><br/>After all that we, with my colleague, a fellow designer, formed the team of Computational Arts.<br/><br/>Here, following my previous graphics-targeted experience, I became a Technical Lead and developed code of automative designs for marketing needs and splash screens for the famous IDEs, using HTML canvas & WebGL shaders as well as neural networks.<br/><br/>Also, I developed UI for the designers to be able control the parameters of the output.</dd></dl><br/><br/><h3><a name="animatron">Animatron LLC (aff. with JetBrains)</a></h3><span class="workpace-period">(07/2011 — 05/2016, 5 years)</span><dl><dt>Where</dt>
 <dd><ul style="list-style-type:none"><li>Munich, Germany /2012 — 2016/ (JetBrains GmbH)</li>
 <li>Odessa, Ukraine /2011 — 2012/</li>
 <li>Boston, United States, MA </li></ul></dd>
@@ -67,29 +70,26 @@
 <dt>Positions</dt>
 <dd>GWT/JS Developer, JS Player</dd>
 <dt>Experience</dt>
-<dd> In Animatron, we’ve built an innovative Animation Editor for the web in GWT and JavaScript, to replace Macromedia Flash. My responsibility was developing the HTML5 Canvas player to play those animations, the one that was packaged into with exported files and allowed to embed it on any web page. It included many 2D graphics techniques I used later in Computational Arts in JetBrains.</dd></dl><div class="positions"><div style="margin-left:0px"><h4><a name="animatron-js-player">JS Player</a></h4><dl><dt>Position:</dt>
-<dd>GWT/JS Developer</dd>
-<dt>Project Website:</dt>
-<dd><ul style="list-style-type:none"><li><a href="https://github.com/Animatron/player">Animatron JS Player @ GitHub</a></li>
-<li><a href="https://animatron.github.io/player/">Animatron JS Player Docs</a></li></ul></dd>
-<dt>Technologies:</dt>
-<dd>HTML5 Canvas, JavaScript, GWT (Google Web Toolkit), Java, SVG</dd>
-<dt>Tags:</dt>
-<dd>#animation, #graphics</dd>
-<dt>Talks:</dt>
-<dd><ul style="list-style-type:none"><li><a href="#talks">Animatron Player API in Details</a></li>
-<li><a href="#talks">How to Grasp the Functional Way of Writing JavaScript</a></li></ul></dd>
-<dt>Projects:</dt>
-<dd><a href="Projects.md#animatron-player">JS Player for Animatron</a></dd></dl></div></div><br/><br/><h3><a name="ipark">iPark Ventures</a></h3><span class="workpace-period">(04/2010 — 06/2011, ~1.5 years)</span><dl><dt>Where</dt>
+<dd>In Animatron, we’ve built an innovative Animation Editor for the web in GWT and JavaScript, to replace Macromedia Flash.<br/><br/>My responsibility was developing the HTML5 JavaScript player and designing the API for it to properly and reliably reproduce all the 2D animations created by the users of the portal.</dd></dl><br/><br/><h3><a name="ipark">iPark Ventures</a></h3><span class="workpace-period">(04/2010 — 06/2011, ~1.5 years)</span><dl><dt>Where</dt>
 <dd>Odessa, Ukraine </dd>
 <dt>Company Website</dt>
 <dd></dd>
 <dt>Company Specialization</dt>
 <dd>Useful web portals for the Ukraine & the world</dd>
 <dt>Positions</dt>
-<dd></dd>
+<dd><ul style="list-style-type:none"><li>Java GWT Front-End Developer, Experika</li>
+<li>Java GWT Front-End Developer, Petonik</li></ul></dd>
 <dt>Experience</dt>
-<dd>At iPark I gave my first public talk, which eventually led me to work in Animatron & JetBrains.</dd></dl><div class="positions"></div><br/><br/><h3><a name="fotonation">FotoNation / Piclinq</a></h3><span class="workpace-period">(06/2007 — 06/2009, 2 years)</span><dl><dt>Where</dt>
+<dd>In iPark we developed the frontend interface using GWT (Java). While working here, I did my first public talks on the conferences, telling the visitors both about GWT and JavaScript tricks.</dd></dl><br/><br/><h3><a name="exectum">Exectum LLC</a></h3><span class="workpace-period">(10/2009 — 02/2010, 6 months)</span><dl><dt>Where</dt>
+<dd>St. Petersburg, Russia </dd>
+<dt>Company Website</dt>
+<dd></dd>
+<dt>Company Specialization</dt>
+<dd>-</dd>
+<dt>Positions</dt>
+<dd>Java EE / Web Developer, Admin Page for Billing Engine</dd>
+<dt>Experience</dt>
+<dd>-</dd></dl><br/><br/><h3><a name="fotonation">FotoNation / Piclinq</a></h3><span class="workpace-period">(06/2007 — 06/2009, 2 years)</span><dl><dt>Where</dt>
 <dd>St. Petersburg, Russia </dd>
 <dt>Company Website</dt>
 <dd><ul style="list-style-type:none"><li><a href="https://praxisdesign.com/piclinq-social-photography/">The Story of Piqlinq</a></li>
@@ -97,20 +97,30 @@
 <dt>Company Specialization</dt>
 <dd>Web portal for managing images & video gallery for Nikon cameras</dd>
 <dt>Positions</dt>
-<dd></dd>
+<dd><ul style="list-style-type:none"><li>Java EE Developer, myPicturetown (Java EE)</li>
+<li>JavaScript Web UI Developer, myPicturetown (JavaScript)</li></ul></dd>
 <dt>Experience</dt>
-<dd>In FotoNation, we developed photo sharing service for Nikon, one of the very first of its kind. At that time, Nikon had released their first Photo Cameras with Wi-Fi support. I worked in the UI Team, responsible both for Java & JavaScript on the FrontEnd, the hardest were the Gallery page and the individual Photo viewer, like including Drag & Drop of images from the file system while there were almost no solutions for it at the time, beating Time Zones and other challenges.<br/><br/>Action System for the UI was the idea and implementation of ours since technologies we used provided no friendly and easy approach. // Development with Apache Wicket + JavaScript ‐ complex native‐JS+Java components and layouting scripts + action system, UI prototypes using JQuery. Components/Layouts are dynamically communicate with server‐side/Database.</dd></dl><div class="positions"></div><br/><br/><h3><a name="emdev-llc">EmDev LLC</a></h3><span class="workpace-period">(03/2005 — 10/2006, 1.5 years)</span><dl><dt>Where</dt>
+<dd>Fotonation (later Piclinq) was the company opened by Nikon especially to develop the portal for users to manage their Photo library. We developed the complex frontend interface for it, using mostly Apache Wicket (Java) and vanilla JavaScript where we needed custom control.</dd></dl><br/><br/><h3><a name="fk-ltd">FK LTD</a></h3><span class="workpace-period">(11/2006 — 06/2007, 8 months)</span><dl><dt>Where</dt>
+<dd>St. Petersburg, Russia </dd>
+<dt>Company Website</dt>
+<dd></dd>
+<dt>Company Specialization</dt>
+<dd>No specific specialization</dd>
+<dt>Positions</dt>
+<dd>PHP & JavaScript Web Developer, CMS</dd>
+<dt>Experience</dt>
+<dd>-</dd></dl><br/><br/><h3><a name="emdev-llc">EmDev LLC</a></h3><span class="workpace-period">(03/2005 — 10/2006, 1.5 years)</span><dl><dt>Where</dt>
 <dd>St. Petersburg, Russia </dd>
 <dt>Company Website</dt>
 <dd><a href="https://emdev.ru">EmDev</a></dd>
 <dt>Company Specialization</dt>
 <dd>Business Project Management products & Web Portals</dd>
 <dt>Positions</dt>
-<dd></dd>
+<dd><ul style="list-style-type:none"><li>Java EE Spring Developer, UnlockAustin</li>
+<li>Java EE Spring Developer, emForge</li>
+<li>Borland Delphi Developer, BPM Project</li></ul></dd>
 <dt>Experience</dt>
-<dd>Mostly driven by outsourcing, in this company I participated in J2EE Projects ﴾Spring, Hibernate﴿ from the scratch, writing components, usually trying out and using new technologies ﴾Ajax, JSF, Spring/Hibernate﴿, what used to do before, and keep doing till today<br/><br/>One of the main projects was UnlockAustin, which was a platform for introducing people the musical and theatrical events (but not only those) happening in Austin, Texas.
-Could be that Austin is a popular city nowadays due to this web portal :D.<br/><br/>I also developed Delphi Visual Component for Stock monitoring (with realtime/dynamic data visualization support) using TreeMap Algorithm to be integrated into the client desktop application;
-Dealing with threads concurrency and a high rate of updates;</dd></dl><div class="positions"></div><br/><br/><h3><a name="vniio">FSBI VNII Okeangeologia</a></h3><span class="workpace-period">(03/2003 — 03/2005, ~2 years)</span><dl><dt>Where</dt>
+<dd>EmDev is the outsourcing company, here I learned to develop with Spring / EJB in connection with Hibernate (everything Java). Also, I have applied my Borland Delphi skills here.</dd></dl><br/><br/><h3><a name="vniio">FSBI VNII Okeangeologia</a></h3><span class="workpace-period">(03/2003 — 03/2005, ~2 years)</span><dl><dt>Where</dt>
 <dd><ul style="list-style-type:none"><li>St. Petersburg, Russia </li>
 <li>Xiao Nang Hai, China </li>
 <li>Privetnoye, Ukraine </li></ul></dd>
@@ -120,9 +130,11 @@ Dealing with threads concurrency and a high rate of updates;</dd></dl><div class
 <dt>Company Specialization</dt>
 <dd>Geological & Oceanographic Research</dd>
 <dt>Positions</dt>
-<dd></dd>
+<dd><ul style="list-style-type:none"><li>Software Developer, Geosignal Analysis (Fourier Transform)</li>
+<li>Scientific Researcher, Geosignal Analysis (Receiving Data From Sensor)</li>
+<li>Animation Creator for Conferences, Public Talks for Geophysical Conferences</li></ul></dd>
 <dt>Experience</dt>
-<dd>My first programmer job turned out to be very interesting for the first job: we had expeditions to China and Ukraine and after these expeditions we’ve processed the collected seismic signals to predict even minor earthquakes.<br/><br/>Here I used a lot of different tools for the development (I learned coding by myself as a hobby before), but the main subject for me was learning the Fast Fourier Transform to flatten unwanted noise in the signal, only later I discovered that it is massively used in graphics and generative music as well, e.g. to split music in harmonics or to vectorize raster images.</dd></dl><div class="positions"></div></div><div id="talks"><h2>Conference/Meetup Talks</h2><ul style="list-style-type:disc"><li><a href="https://youtu.be/e9urkjHSgXY">The Basics of Generating Everything</a> for <a href="https://www.meetup.com/munich-lambda/events/296915834/">Lambda Meetup</a>'23 @ Munich, video in English</li>
+<dd>-</dd></dl></div><div id="talks"><h2>Conference/Meetup Talks</h2><ul style="list-style-type:disc"><li><a href="https://youtu.be/e9urkjHSgXY">The Basics of Generating Everything</a> for <a href="https://www.meetup.com/munich-lambda/events/296915834/">Lambda Meetup</a>'23 @ Munich, video in English</li>
 <li><a href="https://www.youtube.com/watch?v=oSZMB9f6v4c">PureScript with a chance of Free Monads</a> for <a href="https://www.meetup.com/munich-lambda/events/289723656/?eventOrigin=group_past_events">Lambda Meetup</a>'23 @ Munich, video in English</li>
 <li><a href="https://www.youtube.com/watch?v=FSzMBKYgvCE&list=PLQ176FUIyIUZ3DvECf0NkkOpYwE0JECFn&index=9">Noodle : Animation as Ramen</a> for JetBrains Design Talks'22 @ Munich, video in English</li>
 <li><a href="https://www.youtube.com/watch?v=5mOT5q8SKDM">Tron : Minimalist UI for Generative Art</a> for <a href="https://www.jetbrains.com/lp/designconf/">JetBrains Design Conference</a>'20 @ Munich, video in English</li>
@@ -182,5 +194,12 @@ Dealing with threads concurrency and a high rate of updates;</dd></dl><div class
 <li>The Game of Logic & Symbolic Logic, by <em>Lewis Carrol</em></li>
 <li>Interactives Skizzieren with VVVV, by <em>J.Barth, R.S.Grasy, J.Leinberger, M.Lukas, M.L.Schilling</em></li>
 <li>The Elements of Euclid, by <em>Oliver Byrne</em></li>
-<li>Understanding Comics, by <em>Scott McCloud</em></li></ul></div><div id="recommendations"><h2>Recommendations</h2><ul style="list-style-type:none"></ul></div><div id="footer"><p />End.<hr/><p />Anton Kotenko, 2025, April</div></body>
+<li>Understanding Comics, by <em>Scott McCloud</em></li></ul></div><div id="recommendations"><h2>Recommendations</h2><ul style="list-style-type:none"><li><blockquote /><p />Anton is a very talented developer who developed a lot
+    of Ajax-based Web UI as well as server-side Java code
+    for myPictureTown service. His knowledge of web technologies and languages, such
+    as Javascript+Ajax, HTML, CSS are on the expert
+    level. He is a reliable, hard-working professional, and
+    I recommend him without reservations.<p /><cite />Boris Berkman, Senior Software Architect, Piclinq (prior to spin-off - FotoNation)</li>
+<li><blockquote /><p />Anton is a honest, responsible, executive and skilled programmer.<p /><cite />Andrey Nikankin, Technical Director, Piclinq Rus (FotoNation Rus)</li>
+<li><blockquote /><p />I know Anton as a brilliant Javascript programmer with strong understanding of the most advanced concepts of this language. His Java skills are also allow him to write good Java code. It is a pleasure to work with such talented professional.<p /><cite />Sergey Kuznetsov, Software Developer, Piclinq</li></ul></div><div id="footer"><p />End.<hr/><p />Anton Kotenko, 2025, April</div></body>
 </html>
