next version of the compact CV

--- a/CV/Html/cv.html
+++ b/CV/Html/cv.html
@@ -20,7 +20,7 @@
 <dt>Code Examples</dt>
 <dd><a href="https://github.com/shamansir">https://github.com/shamansir</a></dd>
 <dt>Blog</dt>
-<dd><a href="http://shamansir.github.io/blog/">http://shamansir.github.io/blog/</a> (In English),<br/><a href="http://shamansir.github.io/blog/ru">http://shamansir.github.io/blog/ru</a> (In Russian)</dd></dl></div><div id="intro"><h2>Objective</h2>Life, books, neurons and bytes made me an experienced nerd—the one seeking for perfection both in source code (not to the extremes) and in user delight (to some extremes). That's why I like to participate in projects where visual part (and user) matters on the same level as the good code. Also, I like projects which are open to users and other developers to improve. And, I love to code and to solve things in a beautiful way.<br/><br/>What inspires me is discovering the mathematical nature of things like music and art or just debates, AIs or humans<br/><br/>What am I looking for? Challenges.<br/><br/>Things I don't like? Absence of innovation.</div><div id="recap"><h2>Recap</h2><ul style="list-style-type:disc"><li>20+ years programming experience in business (since April 2003)</li>
+<dd><a href="http://shamansir.github.io/blog/">http://shamansir.github.io/blog/</a> (In English),<br/><a href="http://shamansir.github.io/blog/ru">http://shamansir.github.io/blog/ru</a> (In Russian)</dd></dl></div><div id="intro"><h2>Objective</h2>Life, books, neurons and bytes made me an experienced nerd—the one seeking for perfection both in source code (not to the extremes) and in user delight (to some extremes). That's why I like to participate in projects where visual part (and user) matters on the same level as the good code. Also, I like projects which are open to users and other developers to improve. And, I love to code and to solve things in a beautiful way.<br/><br/>What inspires me is discovering the mathematical nature of things like music and art or just debates, AIs or humans.<br/><br/>What am I looking for? Challenges.<br/><br/>Things I don't like? Absence of innovation.</div><div id="recap"><h2>Recap</h2><ul style="list-style-type:disc"><li>20+ years programming experience in business (since April 2003)</li>
 <li>15+ years in frontend developemnt, among them</li>
 <li>8 Companies, incl. Nikon & JetBrains affilates</li>
 <li>More than a dozen of open-source projects</li>
@@ -80,16 +80,7 @@
 <dd><ul style="list-style-type:none"><li>Java GWT Front-End Developer, Experika</li>
 <li>Java GWT Front-End Developer, Petonik</li></ul></dd>
 <dt>Experience</dt>
-<dd>In iPark we developed the frontend interface using GWT (Java). While working here, I did my first public talks on the conferences, telling the visitors both about GWT and JavaScript tricks.</dd></dl><br/><br/><h3><a name="exectum">Exectum LLC</a></h3><span class="workpace-period">(10/2009 — 02/2010, 6 months)</span><dl><dt>Where</dt>
-<dd>St. Petersburg, Russia </dd>
-<dt>Company Website</dt>
-<dd></dd>
-<dt>Company Specialization</dt>
-<dd>-</dd>
-<dt>Positions</dt>
-<dd>Java EE / Web Developer, Admin Page for Billing Engine</dd>
-<dt>Experience</dt>
-<dd>-</dd></dl><br/><br/><h3><a name="fotonation">FotoNation / Piclinq</a></h3><span class="workpace-period">(06/2007 — 06/2009, 2 years)</span><dl><dt>Where</dt>
+<dd>In iPark we developed the frontend interface using GWT (Java). While working here, I did my first public talks on the conferences, telling the visitors both about GWT and JavaScript tricks.</dd></dl><br/><br/><br/><br/><h3><a name="fotonation">FotoNation / Piclinq</a></h3><span class="workpace-period">(06/2007 — 06/2009, 2 years)</span><dl><dt>Where</dt>
 <dd>St. Petersburg, Russia </dd>
 <dt>Company Website</dt>
 <dd><ul style="list-style-type:none"><li><a href="https://praxisdesign.com/piclinq-social-photography/">The Story of Piqlinq</a></li>
@@ -100,16 +91,7 @@
 <dd><ul style="list-style-type:none"><li>Java EE Developer, myPicturetown (Java EE)</li>
 <li>JavaScript Web UI Developer, myPicturetown (JavaScript)</li></ul></dd>
 <dt>Experience</dt>
-<dd>Fotonation (later Piclinq) was the company opened by Nikon especially to develop the portal for users to manage their Photo library. We developed the complex frontend interface for it, using mostly Apache Wicket (Java) and vanilla JavaScript where we needed custom control.</dd></dl><br/><br/><h3><a name="fk-ltd">FK LTD</a></h3><span class="workpace-period">(11/2006 — 06/2007, 8 months)</span><dl><dt>Where</dt>
-<dd>St. Petersburg, Russia </dd>
-<dt>Company Website</dt>
-<dd></dd>
-<dt>Company Specialization</dt>
-<dd>No specific specialization</dd>
-<dt>Positions</dt>
-<dd>PHP & JavaScript Web Developer, CMS</dd>
-<dt>Experience</dt>
-<dd>-</dd></dl><br/><br/><h3><a name="emdev-llc">EmDev LLC</a></h3><span class="workpace-period">(03/2005 — 10/2006, 1.5 years)</span><dl><dt>Where</dt>
+<dd>Fotonation (later Piclinq) was the company opened by Nikon especially to develop the portal for users to manage their Photo library. We developed the complex frontend interface for it, using mostly Apache Wicket (Java) and vanilla JavaScript where we needed custom control.</dd></dl><br/><br/><br/><br/><h3><a name="emdev-llc">EmDev LLC</a></h3><span class="workpace-period">(03/2005 — 10/2006, 1.5 years)</span><dl><dt>Where</dt>
 <dd>St. Petersburg, Russia </dd>
 <dt>Company Website</dt>
 <dd><a href="https://emdev.ru">EmDev</a></dd>
@@ -141,7 +123,7 @@
 <li><a href="https://www.youtube.com/watch?v=he1t3uXvl7o">Generative Animation in Elm</a> for <a href="https://www.youtube.com/playlist?list=PLpVeA1tdgfCCCAKy8DD1SJJ85mOB2ss3l">f(by)</a>'19 @ Minsk, video in English</li>
 <li><a href="https://speakerdeck.com/shamansir/the-future-of-web-ui-development">The Future of Web UI Development.</a> for <a href="https://www.meetup.com/de-DE/munich-frontend-developers/events/253679780/">FrontEnd Developers Meetup</a>'18 @ Munich, slides in English</li>
 <li><a href="https://vimeo.com/242822314">iElm @ JetBrains</a>'17 @ Munich, video in English</li>
-<li><a href="https://vimeo.com/242822314">iElm</a>'17 @ Munich, video in English</li>
+<li><a href="https://vimeo.com/242822314">iElm</a> for Shore GmbH'17 @ Munich, video in English</li>
 <li><a href="https://www.youtube.com/watch?v=-3OL8V7Lk-Y">Elm. The language itself and how it brings functional programming into web</a> for <a href="https://www.meetup.com/de-DE/munich-frontend-developers/events/241139489/">Frontend Developers Meetup</a>'17 @ Munich, video in English</li>
 <li><a href="https://speakerdeck.com/shamansir/pro-git">About Git. That's easy</a>'17 @ Munich, slides in Russian</li>
 <li><a href="https://vimeo.com/222331979">Elm: 2D & 3D Graphics.</a> for <a href="https://www.meetup.com/munich-frontend-developers/">Frontend Developers Meetup</a>'17 @ Munich, video in English</li>
